Estilizar tabla de datos

--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,32 @@ nav .desktop .secondary.mini {
 .element-2:hover {
   margin-left: -130px;
 }
+
+/* ---------------- TABLA --------------------- */
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  width: 800px;
+  margin: 100px auto;
+}
+td,
+th {
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+/*Busca las filas PAR*/
+tr:nth-child(even) {
+  background-color: #eee;
+}
+td:nth-child(4) {
+  text-align: center;
+}
+tbody tr:hover {
+  background-color: rgb(160, 222, 225) !important;
+}
+thead {
+  background-color: black;
+  color: white;
+  position: sticky;
+  top: 0;
+}
