--- a/css/style.css
+++ b/css/style.css
@@ -315,3 +315,149 @@ thead {
     transform: rotate(0);
   }
 }
+
+/* ---------------- FORMULARIO DE LOGIN --------------------- */
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #056863;
+}
+.form-container {
+  background-color: white;
+  width: 80%;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 90%;
+  display: flex;
+  align-items: center;
+}
+.form-container .login-container {
+  width: 500px;
+  margin: 0 auto;
+}
+.form-container .login-container > h2 {
+  text-align: center;
+  font-size: 2rem;
+  /* background-color: aqua; */
+}
+.form-container .login-container > p,
+.form-container .login-container > span {
+  /* background-color: pink; */
+  text-align: center;
+  color: #555;
+}
+.form-container .login-container label {
+  display: block;
+  font-weight: bold;
+  padding: 5px 0;
+}
+.form-container .login-container input.input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 5px;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+}
+.form-container .login-container input.input:focus {
+  outline: solid 1px rgb(0, 153, 255);
+}
+.form-container .login-container .options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.form-container .login-container .options a {
+  color: #0099ff;
+  text-decoration: none;
+}
+.form-container .login-container .options a:hover {
+  text-decoration: underline;
+}
+
+.form-container .login-container .providers {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: center;
+  margin-top: 30px;
+}
+.btn {
+  border: none;
+  padding: 10px 0;
+  width: 100%;
+  font-weight: bolder;
+  display: block;
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn.btn-login {
+  background-color: black;
+  color: white;
+}
+.btn.btn-login:hover {
+  background-color: #333;
+}
+.btn.btn-facebook {
+  background-color: rgb(10, 82, 216);
+  color: white;
+}
+.btn.btn-facebook:hover {
+  background-color: rgb(8, 89, 162);
+}
+.btn.btn-google {
+  background-color: white;
+  color: black;
+  border: solid 1px #ccc;
+}
+.btn.btn-google:hover {
+  background-color: rgb(240, 240, 240);
+}
+.btn.btn-twitter {
+  background-color: rgb(10, 168, 216);
+  color: white;
+}
+.btn.btn-twitter:hover {
+  background-color: rgb(8, 137, 177);
+  color: white;
+}
+
+.form-container .welcome-screen-container {
+  background-color: black;
+  width: 50%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1357px) {
+  .form-container {
+    width: 95%;
+  }
+  .form-container .login-container {
+    width: 400px;
+    margin: 0 auto;
+  }
+  .form-container .welcome-screen-container {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  /* .form-container {
+    height: 70%;
+  } */
+  .form-container .login-container {
+    width: 350px;
+  }
+  .form-container .welcome-screen-container {
+    display: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .form-container .login-container {
+    width: 250px;
+    margin: 0 auto;
+  }
+}
