--- a/css/style.css
+++ b/css/style.css
@@ -603,3 +603,66 @@ thead {
   background-color: #1961be;
   border: solid 1px #1961be;
 }
+
+/* ---------------- CHECK BOXES Y RADIO BUTTONS --------------------- */
+.check {
+  padding: 100px;
+}
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  user-select: none;
+}
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.checkbox-container .checkmark {
+  position: absolute;
+  border-radius: 3px;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  transition: all 0.3s ease-in-out;
+}
+.checkbox-container .checkmark.radio {
+  position: absolute;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  transition: all 0.3s ease-in-out;
+}
+.checkbox-container .checkmark .material-icons {
+  color: white;
+  transform: scale(0);
+  transition: all 0.3s ease-in-out;
+}
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+.checkbox-container input:checked ~ .checkmark .material-icons {
+  transform: scale(1);
+}
+
+.checkbox-container input:checked ~ .checkmark.radio .circle {
+  position: absolute;
+  border-radius: 50%;
+  top: 6px;
+  left: 7px;
+  height: 12px;
+  width: 12px;
+  background-color: white;
+  transition: all 0.3s ease-in-out;
+}
