--- a/css/style.css
+++ b/css/style.css
@@ -666,3 +666,42 @@ thead {
   background-color: white;
   transition: all 0.3s ease-in-out;
 }
+
+/* ---------------- BARRA DE BÚSQUEDA --------------------- */
+.search-bar {
+  border: solid 1px #ccc;
+  border-radius: 30px;
+  width: 700px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 5px 10px;
+  margin: 5px auto;
+  transition: all 0.3 ease-in-out;
+}
+.search-bar:focus-within {
+  border: solid 1px #aaa;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+.search-bar input[type="text"] {
+  border: none;
+  outline: none;
+  padding: 10px;
+  flex: 1;
+  font-size: 16px;
+}
+.search-bar .actions {
+  display: flex;
+  gap: 5px;
+}
+.search-bar .actions button {
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  color: #999;
+  transition: color 0.3s ease-in-out;
+}
+.search-bar .actions button:hover {
+  color: #2979e2;
+}
