--- a/css/style.css
+++ b/css/style.css
@@ -705,3 +705,47 @@ thead {
 .search-bar .actions button:hover {
   color: #2979e2;
 }
+
+/* ---------------- VOLTEAR TARJETAS EN 3D --------------------- */
+.cards3d {
+  display: flex;
+  gap: 5px;
+}
+.cards3d .flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+.cards3d .flip-card .flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+  transform-style: preserve-3d;
+}
+.cards3d .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.cards3d .flip-card .flip-card-front,
+.cards3d .flip-card .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.cards3d .flip-card .flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+.cards3d .flip-card .flip-card-front img {
+  width: 100%;
+  height: 100%;
+}
+
+.cards3d .flip-card .flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
