--- a/css/style.css
+++ b/css/style.css
@@ -839,3 +839,65 @@ thead {
   top: 0;
   height: calc(100% - 53px);
 }
+
+/* ---------------- STACK DE PERSONAS --------------------- */
+.personas-container {
+  margin: 100px auto;
+  width: 500px;
+  display: flex;
+}
+.personas-container .persona {
+  position: relative;
+  margin-right: -20px;
+  display: inline-flex;
+  flex-direction: column;
+}
+.persona img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: solid 2px rgb(226, 222, 222);
+  transition: transform 0.3s ease-in-out;
+}
+.personas-container .persona .name {
+  position: absolute;
+  background-color: black;
+  color: white;
+  border: solid 1px white;
+  border-radius: 5px;
+  min-width: 100px;
+  width: 150px;
+  top: -55px;
+  left: calc((100% + 10px) * -1);
+  padding: 10px 15px;
+  display: none;
+}
+.personas-container .persona:hover .name {
+  display: inline-block;
+}
+.personas-container .persona:hover img {
+  transform: translateY(-2px);
+}
+.personas-container .persona .name .text {
+  /* REPASAR */
+  display: inline-block;
+  text-overflow: ellipsis; /*El texto es más grande, por lo que se recorta y se coloca [...]*/
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  text-align: center;
+  box-sizing: border-box;
+  width: 150px;
+}
+.personas-container .persona .name .text::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: solid 10px black;
+  border-bottom: solid 10px transparent;
+  border-left: solid 10px transparent;
+  border-right: solid 10px transparent;
+  left: calc(50% - 10px);
+  bottom: -20px;
+}
